src/test/compile-fail/issue-897-2.rs
fn g() -> ! { fail; }
fn f() -> ! {
    ret 42i; //! ERROR expected `_|_` but found `int`
    g(); //! WARNING unreachable statement
}
fn main() { }
